# parallel-life-generator

./: .env.example  .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
PRD/: PRD.txt
plg/: cli.py  config.py
plg/export/: markdown.py  mermaid.py
plg/llm/: base.py  factory.py  openai_client.py  prompts.py
plg/models/: db.py  models.py
plg/tools/: analysis.py  branching.py  context.py  exceptions.py  parsing.py  show.py  tree.py
tests/: conftest.py
tests/llm/: test_factory.py  test_openai_client.py
tests/models/: test_db.py
